# regular-expression-engine

./: Cargo.toml  regex.tex
benches/: benchmark.rs
src/: engine.rs  helpers.rs  lib.rs  main.rs
src/engine/: codegen.rs  evaluator.rs  parser.rs
